Creato con Colaboratory

--- a/tensorflow_tutorial.ipynb
+++ b/tensorflow_tutorial.ipynb
@@ -7,9 +7,11 @@
       "collapsed_sections": [
         "HKSnFmBHWPPC",
         "wvjh_NSOVgL6",
-        "XlqeKw5FV0pK"
+        "XlqeKw5FV0pK",
+        "Z8y3xa9laibb",
+        "M9SNVwsSd75r"
       ],
-      "authorship_tag": "ABX9TyMmL1gURrDpAm0ugLGjPuHL",
+      "authorship_tag": "ABX9TyMjLlGZwiy9boG/55sMPmUW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +41,7 @@
       "metadata": {
         "id": "S6dbMI3kEAAx"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -61,7 +63,7 @@
       "metadata": {
         "id": "APqpuZViFB_K"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +76,7 @@
       "metadata": {
         "id": "KviiMAzHIlRY"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +99,7 @@
         "id": "oa3ikTMeJrOD",
         "outputId": "d78917cb-8da9-4c59-f6f6-9b8e47bdb377"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -182,7 +184,7 @@
       "metadata": {
         "id": "bgPBuYZYameq"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +213,7 @@
         "id": "4mFGRRcOhGNR",
         "outputId": "e708f8a9-21dc-4197-b7bd-df4df98bbe38"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -446,7 +448,7 @@
         "id": "nL2d4lxXjDS2",
         "outputId": "2f6f2a2a-d9ad-4ec8-b54f-f822fb15a589"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,7 +475,7 @@
         "id": "e0k5YEpBjWeV",
         "outputId": "3047cd78-7add-4d21-9a6f-d7d1f5423356"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +565,7 @@
         "id": "inxpNjrGm97r",
         "outputId": "aeec2f2e-d85f-49fb-b593-877c2bdcd1f2"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,7 +592,7 @@
         "id": "4Pg71fg12RgC",
         "outputId": "edfc2a81-9f5b-476a-fdde-861c27d04d53"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,6 +606,297 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Neural Networks"
+      ],
+      "metadata": {
+        "id": "M9SNVwsSd75r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "id": "LfZFvjird7FH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fashion_mnist = keras.datasets.fashion_mnist                                        # load fashion mnist dataset from keras.\n",
+        "\n",
+        "(train_images, train_labels),(test_images,test_labels) = fashion_mnist.load_data()  # split into training and testing.\n",
+        "\n",
+        "class_names = [\"T-shirt/top\", \"Trouser\", \"Pullover\", \"Dress\", \"Coat\", \"Sandal\",\n",
+        "               \"Shirt\", \"Sneaker\", \"Bag\", \"Ankle boot\"]"
+      ],
+      "metadata": {
+        "id": "Cz36d5s4eKOZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 60000 images 28x28 pixels.\n",
+        "train_images.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ysZI7L13etH0",
+        "outputId": "70c3efe4-e125-4513-de0f-9d025b82e7f2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(60000, 28, 28)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# pixel values in RGB images are integers in range (0,255)\n",
+        "train_images[0]                                                                  # this is the first image of the training dataset\n",
+        "train_images[0][0]                                                               # this is the first row of the first image\n",
+        "train_images[0][0][0]                                                            # this is the first pixel value of the first row of the first image."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sJ3BwzDLgAHX",
+        "outputId": "c68d9354-ed91-466a-c3b1-0a1e9bb0f080"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_labels.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OGPtqT6AfGLH",
+        "outputId": "46739035-10fe-43c3-a6bf-12c9440be15f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(60000,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# labels are classification labels (integers in range [0,9] representing 10 classes).\n",
+        "train_labels[:20]"
+      ],
+      "metadata": {
+        "id": "d4ftF57igzLb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Preprocessing (normalize input between 0 and 1)\n",
+        "\n",
+        "train_images = train_images / 255.0\n",
+        "\n",
+        "test_images = test_images / 255.0"
+      ],
+      "metadata": {
+        "id": "bdusCBpmhUrR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Build the Sequential model (feedforward neural network).\n",
+        "model = keras.Sequential([\n",
+        "    keras.layers.Flatten(input_shape = (28,28)),                                                                                               # this is the input layer.\n",
+        "    keras.layers.Dense(512, activation = \"relu\"),                                                                                               # this is the hidden layer.\n",
+        "    keras.layers.Dense(128, activation = \"relu\"),                                                                                               # this is the hidden layer.\n",
+        "    keras.layers.Dense(10, activation = \"softmax\"),                                                                                          # this is the output layer.\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "dQX7zl7Ghmnn"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(\n",
+        "    optimizer = \"adam\",\n",
+        "    loss = \"sparse_categorical_crossentropy\",\n",
+        "    metrics = [\"accuracy\"],\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "3mWwekgFjoxO"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(\n",
+        "    train_images,\n",
+        "    train_labels,\n",
+        "    epochs = 15,\n",
+        "    batch_size = 128,\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "Y0_X-WBXkBXT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6867e3ae-1252-4e74-d5d8-3449f4ac009d"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/15\n",
+            "469/469 [==============================] - 10s 18ms/step - loss: 4.6763 - accuracy: 0.7574\n",
+            "Epoch 2/15\n",
+            "469/469 [==============================] - 6s 13ms/step - loss: 0.7406 - accuracy: 0.8181\n",
+            "Epoch 3/15\n",
+            "469/469 [==============================] - 7s 15ms/step - loss: 0.5083 - accuracy: 0.8337\n",
+            "Epoch 4/15\n",
+            "469/469 [==============================] - 6s 14ms/step - loss: 0.4273 - accuracy: 0.8523\n",
+            "Epoch 5/15\n",
+            "469/469 [==============================] - 12s 25ms/step - loss: 0.3908 - accuracy: 0.8623\n",
+            "Epoch 6/15\n",
+            "469/469 [==============================] - 6s 13ms/step - loss: 0.3623 - accuracy: 0.8709\n",
+            "Epoch 7/15\n",
+            "469/469 [==============================] - 8s 16ms/step - loss: 0.3543 - accuracy: 0.8740\n",
+            "Epoch 8/15\n",
+            "469/469 [==============================] - 6s 14ms/step - loss: 0.3311 - accuracy: 0.8797\n",
+            "Epoch 9/15\n",
+            "469/469 [==============================] - 11s 24ms/step - loss: 0.3258 - accuracy: 0.8837\n",
+            "Epoch 10/15\n",
+            "469/469 [==============================] - 6s 12ms/step - loss: 0.3183 - accuracy: 0.8857\n",
+            "Epoch 11/15\n",
+            "469/469 [==============================] - 8s 18ms/step - loss: 0.3122 - accuracy: 0.8884\n",
+            "Epoch 12/15\n",
+            "469/469 [==============================] - 7s 15ms/step - loss: 0.3033 - accuracy: 0.8906\n",
+            "Epoch 13/15\n",
+            "469/469 [==============================] - 11s 24ms/step - loss: 0.3073 - accuracy: 0.8887\n",
+            "Epoch 14/15\n",
+            "469/469 [==============================] - 6s 12ms/step - loss: 0.3026 - accuracy: 0.8893\n",
+            "Epoch 15/15\n",
+            "469/469 [==============================] - 7s 16ms/step - loss: 0.2896 - accuracy: 0.8944\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f1a91ecf580>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_loss, test_acc = model.evaluate(test_images, test_labels, verbose = 1)\n",
+        "\n",
+        "print( \"test accuracy : \", test_acc )"
+      ],
+      "metadata": {
+        "id": "dFwTtMN0kha-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0dbde660-0308-457c-fe9a-40d44306a399"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "313/313 [==============================] - 1s 3ms/step - loss: 0.3735 - accuracy: 0.8732\n",
+            "test accuracy :  0.873199999332428\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Convolutional Neural Network"
+      ],
+      "metadata": {
+        "id": "HkpbVjI9qmpF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oNCP8oaIqph3"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
