--- a/tensorflow_tutorial.ipynb
+++ b/tensorflow_tutorial.ipynb
@@ -8,10 +8,9 @@
         "HKSnFmBHWPPC",
         "wvjh_NSOVgL6",
         "XlqeKw5FV0pK",
-        "Z8y3xa9laibb",
-        "M9SNVwsSd75r"
+        "Z8y3xa9laibb"
       ],
-      "authorship_tag": "ABX9TyMjLlGZwiy9boG/55sMPmUW",
+      "authorship_tag": "ABX9TyMUjVWeldNeWWgqSDdFcUBL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -891,12 +890,97 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import tensorflow as tf\n",
+        "\n",
+        "from tensorflow.keras import datasets, layers, models\n",
+        "import matplotlib.pyplot as plt"
+      ],
       "metadata": {
-        "id": "oNCP8oaIqph3"
+        "id": "dfzcQznJ3hVJ"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_images.reshape([60000,28,28,1])\n",
+        "test_images.reshape([-1,28,28,1])"
+      ],
+      "metadata": {
+        "id": "z31rPR5h30CK"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = models.Sequential()\n",
+        "model.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)))\n",
+        "model.add(layers.MaxPooling2D((2, 2)))\n",
+        "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+        "model.add(layers.MaxPooling2D((2, 2)))\n",
+        "model.add(layers.Conv2D(64, (3, 3), activation='relu'))"
+      ],
+      "metadata": {
+        "id": "oNCP8oaIqph3"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.add(layers.Flatten())\n",
+        "model.add(layers.Dense(64, activation='relu'))\n",
+        "model.add(layers.Dense(10))"
+      ],
+      "metadata": {
+        "id": "DUam1r0m4aCo"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(optimizer='adam',\n",
+        "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+        "              metrics=['accuracy'])\n",
+        "\n",
+        "history = model.fit(\n",
+        "    train_images,\n",
+        "    train_labels,\n",
+        "    epochs = 4,\n",
+        "    validation_data = (test_images, test_labels)\n",
+        ")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "leyuZ8LV4jeY",
+        "outputId": "68b20715-103e-46f1-a55c-6344d3a4251a"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/4\n",
+            "1875/1875 [==============================] - 77s 40ms/step - loss: 0.5393 - accuracy: 0.8194 - val_loss: 0.3940 - val_accuracy: 0.8595\n",
+            "Epoch 2/4\n",
+            "1875/1875 [==============================] - 76s 40ms/step - loss: 0.3403 - accuracy: 0.8767 - val_loss: 0.3575 - val_accuracy: 0.8744\n",
+            "Epoch 3/4\n",
+            "1875/1875 [==============================] - 71s 38ms/step - loss: 0.3077 - accuracy: 0.8875 - val_loss: 0.3341 - val_accuracy: 0.8802\n",
+            "Epoch 4/4\n",
+            "1875/1875 [==============================] - 72s 38ms/step - loss: 0.2861 - accuracy: 0.8945 - val_loss: 0.3293 - val_accuracy: 0.8797\n"
+          ]
+        }
+      ]
     }
   ]
 }
